<resources>
    <string name="app_name">Technopolis</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="open_flaky_screen">Open Flaky Screen</string>
    <string name="open_list_screen">Open List Screen</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="flaky_counter">Counter: %1$d</string>
    <string name="count">Count</string>

    <string name="item">Item: %1$d</string>
</resources>